issues-3: clean up the code