@@ -20,8 +20,11 @@ package de.ibmix.magkit.monitoring.endpoint.overview;
  * #L%
  */
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import de.ibmix.magkit.monitoring.endpoint.AbstractMonitoringEndpoint;
+import de.ibmix.magkit.monitoring.endpoint.ConfiguredMonitoringEndpointDefinition;
+import de.ibmix.magkit.monitoring.endpoint.MonitoringEndpointDefinition;
+import info.magnolia.context.MgnlContext;
+import info.magnolia.rest.registry.EndpointDefinitionRegistry;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -30,32 +33,24 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
-
-import de.ibmix.magkit.monitoring.endpoint.AbstractMonitoringEndpoint;
-import de.ibmix.magkit.monitoring.endpoint.ConfiguredMonitoringEndpointDefinition;
-import de.ibmix.magkit.monitoring.endpoint.MonitoringEndpointDefinition;
-
-import info.magnolia.context.MgnlContext;
-import info.magnolia.rest.registry.EndpointDefinitionRegistry;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
- *
  * Overview Endpoint.
  *
  * @author Dan Olaru (IBM)
  * @since 2020-04-24
- *
  */
 
 @Path("/monitoring")
 public class OverviewEndpoint extends AbstractMonitoringEndpoint<MonitoringEndpointDefinition> {
 
-    private EndpointDefinitionRegistry _registry;
+    private final EndpointDefinitionRegistry _registry;
 
     @Inject
     protected OverviewEndpoint(MonitoringEndpointDefinition endpointDefinition, EndpointDefinitionRegistry registry) {
         super(endpointDefinition);
-
         _registry = registry;
     }
 
@@ -76,20 +71,16 @@ public class OverviewEndpoint extends AbstractMonitoringEndpoint<MonitoringEndpo
 
                 // "path"
                 String endpointPath = uriPath.replace("monitoring", p.getMetadata().getReferenceId());
-
                 String[] refIdElements = p.getMetadata().getReferenceId().split("/");
 
-                String version = "";
-                String name = "";
+                // the endpoint is NOT versioned: "monitoring" + moduleName
+                String version = "custom";
+                String name = refIdElements[1];
 
                 if (refIdElements.length == 3) {
                     // the endpoint is versioned: "monitoring" + version + moduleName
                     version = refIdElements[1];
                     name = refIdElements[2];
-                } else {
-                    // the endpoint is NOT versioned: "monitoring" + moduleName
-                    version = "custom";
-                    name = refIdElements[1];
                 }
 
                 // we don't want to list our own Overview endpoint among the found endpoints;
@@ -100,11 +91,11 @@ public class OverviewEndpoint extends AbstractMonitoringEndpoint<MonitoringEndpo
                 if (!isThisOurOverviewEndpoint) {
 
                     EndpointInfo myEndpoint = new EndpointInfo(name, endpointPath);
-                    if (endpointsOverview.getCategorizedEndpoints().keySet().contains(version)) {
+                    if (endpointsOverview.getCategorizedEndpoints().containsKey(version)) {
                         endpointsOverview.getCategorizedEndpoints().get(version).add(myEndpoint);
                     } else {
                         endpointsOverview.getCategorizedEndpoints().put(version,
-                                new ArrayList<EndpointInfo>(Arrays.asList(myEndpoint)));
+                            new ArrayList<>(List.of(myEndpoint)));
                     }
                 }
 
